<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2"
    tools:context=".you_loss">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:src="@drawable/save_a_dollar"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/game_txt"/>

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/restart"
        android:src="@drawable/home"
        tools:ignore="TouchTargetSizeCheck"/>

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/setting"
        android:src="@drawable/settings"
        tools:ignore="TouchTargetSizeCheck"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="165dp"
        android:src="@drawable/loss_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/loss_txt"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:contentDescription="@string/img_loss"
        android:scaleType="fitCenter"
        android:src="@drawable/loss_img"
        tools:ignore="ImageContrastCheck"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@color/baby_blue"
        android:layout_marginTop="560dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_restart"
        android:fontFamily="@font/goldana_base"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:drawableStart="@drawable/restart"
        android:id="@+id/restart"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebasneue"
        android:text="@string/part10"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="620dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>