<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_2">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:src="@drawable/save_a_dollar"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/game_txt"/>

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/restart"
        android:src="@drawable/home"
        tools:ignore="TouchTargetSizeCheck"
        android:id="@+id/home"/>

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/setting"
        android:src="@drawable/settings"
        tools:ignore="TouchTargetSizeCheck"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebasneue"
        android:text="@string/part1"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:id="@+id/question"
        tools:ignore="RelativeOverlap"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dog_part1"
        android:scaleType="fitCenter"
        android:layout_marginTop="260dp"
        android:id="@+id/img_dog"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/baby_blue"
        android:layout_marginTop="530dp"
        android:layout_marginStart="40dp"
        android:text="@string/yes"
        android:fontFamily="@font/goldana_base"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:id="@+id/yes"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/baby_red"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="530dp"
        android:text="@string/no"
        android:fontFamily="@font/goldana_base"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:id="@+id/no"/>


</RelativeLayout>